Add text pre-processing

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Authors: Adam Lewandowski, Ivan Sladkov, Patrick English\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import string\n",
+    "import nltk\n",
+    "\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +195,128 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tknzr = TweetTokenizer()\n",
     "raw_tweets_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Baseline processing\n",
+    "#tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
+    "\n",
+    "# If you don't want to wait\n",
+    "tokenized_tweets = raw_tweets_df[5][:2000].copy().apply(lambda x : x.lower())\n",
+    "\n",
+    "#This can take a while\n",
+    "tokenized_tweets = tokenized_tweets.apply(lambda x : tknzr.tokenize(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Should things like ... stay? \n",
+    "def remove_punctuation(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    def remove_punct(tokens):\n",
+    "        if '.' in tokens:\n",
+    "            tokens.remove('.')\n",
+    "        elif '?' in tokens:\n",
+    "            tokens.remove('?')\n",
+    "        elif '!' in tokens:\n",
+    "            tokens.remove('!')\n",
+    "        elif ',' in tokens:\n",
+    "            tokens.remove(',')\n",
+    "        return tokens\n",
+    "    return t.apply(lambda tweet : remove_punct(tweet))\n",
+    "\n",
+    "def remove_stop_words(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    from nltk.corpus import stopwords\n",
+    "    sw = set(stopwords.words('english')) \n",
+    "    return t.apply(lambda tweet:[w for w in tweet if not w in sw])\n",
+    "\n",
+    "#TODO add spell correction\n",
+    "def correct_spelling(tweets):\n",
+    "    return tweets\n",
+    "\n",
+    "def pos_tag(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    return t.apply(lambda tweet: nltk.pos_tag(tweet))\n",
+    "\n",
+    "#TBD\n",
+    "def emoticon_transcoder(tweets):\n",
+    "    return tweets\n",
+    "\n",
+    "def lemmatize(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    \n",
+    "    def get_wordnet_pos(treebank_tag):\n",
+    "        from nltk.corpus import wordnet\n",
+    "        if treebank_tag.startswith('J'):\n",
+    "            return wordnet.ADJ\n",
+    "        elif treebank_tag.startswith('V'):\n",
+    "            return wordnet.VERB\n",
+    "        elif treebank_tag.startswith('N'):\n",
+    "            return wordnet.NOUN\n",
+    "        elif treebank_tag.startswith('R'):\n",
+    "            return wordnet.ADV\n",
+    "        else:\n",
+    "            return wordnet.NOUN\n",
+    "        \n",
+    "    lem = WordNetLemmatizer()\n",
+    "    def lemmatize_word(w):\n",
+    "        transcoded_tag = get_wordnet_pos(w[1])\n",
+    "        wl = lem.lemmatize(w[0], transcoded_tag)\n",
+    "        return (wl,w[1])\n",
+    "    return t.apply(lambda tweet:[lemmatize_word(w) for w in tweet])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       [(@switchfoot, NN), (http://twitpic.com/2y1zl,...\n",
+      "1       [(upset, JJ), (can't, NN), (update, JJ), (face...\n",
+      "2       [(@kenichan, RB), (dive, VBD), (many, JJ), (ti...\n",
+      "3       [(whole, JJ), (body, NN), (feel, NNS), (itchy,...\n",
+      "4       [(@nationwideclass, NN), (,, ,), (behave, VBG)...\n",
+      "                              ...                        \n",
+      "1995           [(@roxy_yeah, NN), (yep, CD), (loser, NN)]\n",
+      "1996    [(finito, NN), (!, .), (bathroom, NN), (contra...\n",
+      "1997    [(@caitlinaudrey, JJ), (awww, NN), (!, .), (su...\n",
+      "1998    [(sorry, NN), (,, ,), (sf, JJ), (reschedule, V...\n",
+      "1999    [(2morw, CD), (get, NN), (blast, VBN), (wisdom...\n",
+      "Name: 5, Length: 2000, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pre-processing\n",
+    "#comment lines to skip some steps\n",
+    "#You need to run things in this order\n",
+    "tweets = remove_punctuation(tokenized_tweets)\n",
+    "tweets = remove_stop_words(tweets)\n",
+    "tweets = pos_tag(tweets)\n",
+    "tweets = lemmatize(tweets)\n",
+    "print(tweets)"
    ]
   },
   {
