--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,15 @@
     "import string\n",
     "import nltk\n",
     "\n",
+    "#from spellchecker import SpellChecker\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from nltk.tokenize import TweetTokenizer\n",
     "from nltk.stem.wordnet import WordNetLemmatizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_tweets_df = pd.read_csv(\"data/training.1600000.processed.noemoticon.csv\", encoding = \"ISO-8859-1\", header=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -195,27 +188,28 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tknzr = TweetTokenizer()\n",
+    "raw_tweets_df = pd.read_csv(\"data/training.1600000.processed.noemoticon.csv\", encoding = \"ISO-8859-1\", header=None)\n",
     "raw_tweets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Baseline processing\n",
+    "tknzr = TweetTokenizer()\n",
     "#tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
     "\n",
     "# If you don't want to wait\n",
-    "tokenized_tweets = raw_tweets_df[5][:2000].copy().apply(lambda x : x.lower())\n",
+    "tokenized_tweets = raw_tweets_df[5][:16000].copy().apply(lambda x : x.lower())\n",
     "\n",
     "#This can take a while\n",
     "tokenized_tweets = tokenized_tweets.apply(lambda x : tknzr.tokenize(x))"
@@ -223,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +254,28 @@
     "def emoticon_transcoder(tweets):\n",
     "    return tweets\n",
     "\n",
+    "def remove_pos_tags(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    return t.apply(lambda tweet: [w[0] for w in tweet])\n",
+    "\n",
+    "def identity_tokenizer(text):\n",
+    "    return text\n",
+    "\n",
+    "def scikit_vectorize(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    vectorizer = TfidfVectorizer(lowercase=False, tokenizer=identity_tokenizer, min_df=2)\n",
+    "    vectors = vectorizer.fit_transform(t)\n",
+    "    feature_names = vectorizer.get_feature_names()\n",
+    "    dense = vectors.todense()\n",
+    "    denselist = dense.tolist()\n",
+    "    return pd.DataFrame(denselist, columns=feature_names)\n",
+    "\n",
+    "def merge_tokens(tweets):\n",
+    "    t = tweets.copy()\n",
+    "    return t.apply(lambda tweet: ' '.join(tweet))\n",
+    "\n",
+    "\n",
+    "\n",
     "def lemmatize(tweets):\n",
     "    t = tweets.copy()\n",
     "    \n",
@@ -286,25 +302,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       [(@switchfoot, NN), (http://twitpic.com/2y1zl,...\n",
-      "1       [(upset, JJ), (can't, NN), (update, JJ), (face...\n",
-      "2       [(@kenichan, RB), (dive, VBD), (many, JJ), (ti...\n",
-      "3       [(whole, JJ), (body, NN), (feel, NNS), (itchy,...\n",
-      "4       [(@nationwideclass, NN), (,, ,), (behave, VBG)...\n",
-      "                              ...                        \n",
-      "1995           [(@roxy_yeah, NN), (yep, CD), (loser, NN)]\n",
-      "1996    [(finito, NN), (!, .), (bathroom, NN), (contra...\n",
-      "1997    [(@caitlinaudrey, JJ), (awww, NN), (!, .), (su...\n",
-      "1998    [(sorry, NN), (,, ,), (sf, JJ), (reschedule, V...\n",
-      "1999    [(2morw, CD), (get, NN), (blast, VBN), (wisdom...\n",
-      "Name: 5, Length: 2000, dtype: object\n"
+      "              !    \"    #  #24  #asot400  #dreams  #dwsr  #earthquake  \\\n",
+      "0      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "1      0.126720  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "2      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "3      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "4      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "...         ...  ...  ...  ...       ...      ...    ...          ...   \n",
+      "15995  0.118446  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "15996  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "15997  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "15998  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "15999  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
+      "\n",
+      "       #easter  #epicfail  ...   ½m   ½n  ½ng  ½nh   ½s   ½t   ½y   ½ï    ¿  \\\n",
+      "0          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "1          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "2          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "3          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "4          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "...        ...        ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+      "15995      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "15996      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "15997      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "15998      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "15999      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+      "\n",
+      "         ï  \n",
+      "0      0.0  \n",
+      "1      0.0  \n",
+      "2      0.0  \n",
+      "3      0.0  \n",
+      "4      0.0  \n",
+      "...    ...  \n",
+      "15995  0.0  \n",
+      "15996  0.0  \n",
+      "15997  0.0  \n",
+      "15998  0.0  \n",
+      "15999  0.0  \n",
+      "\n",
+      "[16000 rows x 6504 columns]\n"
      ]
     }
    ],
@@ -316,7 +360,11 @@
     "tweets = remove_stop_words(tweets)\n",
     "tweets = pos_tag(tweets)\n",
     "tweets = lemmatize(tweets)\n",
-    "print(tweets)"
+    "tweets = remove_pos_tags(tweets)\n",
+    "#tweets = merge_tokens(tweets)\n",
+    "tweetsVector = scikit_vectorize(tweets.array)\n",
+    "\n",
+    "print(tweetsVector)"
    ]
   },
   {
