Move tweetsVector to next section

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "#tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
     "\n",
     "# If you don't want to wait\n",
-    "tokenized_tweets = raw_tweets_df[5][:16000].copy().apply(lambda x : x.lower())\n",
+    "tokenized_tweets = raw_tweets_df[5][:1600].copy().apply(lambda x : x.lower())\n",
     "\n",
     "#This can take a while\n",
     "tokenized_tweets = tokenized_tweets.apply(lambda x : tknzr.tokenize(x))"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,6 @@
     "            return wordnet.ADV\n",
     "        else:\n",
     "            return wordnet.NOUN\n",
-    "        \n",
     "    lem = WordNetLemmatizer()\n",
     "    def lemmatize_word(w):\n",
     "        transcoded_tag = get_wordnet_pos(w[1])\n",
@@ -302,56 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              !    \"    #  #24  #asot400  #dreams  #dwsr  #earthquake  \\\n",
-      "0      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "1      0.126720  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "2      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "3      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "4      0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "...         ...  ...  ...  ...       ...      ...    ...          ...   \n",
-      "15995  0.118446  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "15996  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "15997  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "15998  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "15999  0.000000  0.0  0.0  0.0       0.0      0.0    0.0          0.0   \n",
-      "\n",
-      "       #easter  #epicfail  ...   ½m   ½n  ½ng  ½nh   ½s   ½t   ½y   ½ï    ¿  \\\n",
-      "0          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "1          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "2          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "3          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "4          0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "...        ...        ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
-      "15995      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "15996      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "15997      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "15998      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "15999      0.0        0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-      "\n",
-      "         ï  \n",
-      "0      0.0  \n",
-      "1      0.0  \n",
-      "2      0.0  \n",
-      "3      0.0  \n",
-      "4      0.0  \n",
-      "...    ...  \n",
-      "15995  0.0  \n",
-      "15996  0.0  \n",
-      "15997  0.0  \n",
-      "15998  0.0  \n",
-      "15999  0.0  \n",
-      "\n",
-      "[16000 rows x 6504 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Pre-processing\n",
     "#comment lines to skip some steps\n",
@@ -361,18 +313,52 @@
     "tweets = pos_tag(tweets)\n",
     "tweets = lemmatize(tweets)\n",
     "tweets = remove_pos_tags(tweets)\n",
-    "#tweets = merge_tokens(tweets)\n",
-    "tweetsVector = scikit_vectorize(tweets.array)\n",
-    "\n",
-    "print(tweetsVector)"
+    "#tweets = merge_tokens(tweets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             !    \"    #  #24  #fail  #fb    $         %    &    '  ...   yo  \\\n",
+      "0     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "1     0.139964  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "2     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.342562  0.0  0.0  ...  0.0   \n",
+      "3     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "4     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "...        ...  ...  ...  ...    ...  ...  ...       ...  ...  ...  ...  ...   \n",
+      "1595  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "1596  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "1597  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "1598  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "1599  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
+      "\n",
+      "      youtube   yr  yucky  yup    ~   ½m   ½s    ¿    ï  \n",
+      "0         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "1         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "2         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "3         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "4         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "...       ...  ...    ...  ...  ...  ...  ...  ...  ...  \n",
+      "1595      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "1596      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "1597      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "1598      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "1599      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+      "\n",
+      "[1600 rows x 1317 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweetsVector = scikit_vectorize(tweets.array)\n",
+    "print(tweetsVector)"
+   ]
   }
  ],
  "metadata": {
