--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -206,12 +206,13 @@
    "source": [
     "#Baseline processing\n",
     "tknzr = TweetTokenizer()\n",
-    "#tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
+    "\n",
+    "#This can take a while\n",
+    "#tokenized_tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
     "\n",
     "# If you don't want to wait\n",
     "tokenized_tweets = raw_tweets_df[5][:1600].copy().apply(lambda x : x.lower())\n",
     "\n",
-    "#This can take a while\n",
     "tokenized_tweets = tokenized_tweets.apply(lambda x : tknzr.tokenize(x))"
    ]
   },
