create full tf-idf vector

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "[1600000 rows x 6 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,16 +211,24 @@
     "#tokenized_tweets = raw_tweets_df[5].copy().apply(lambda x : x.lower())\n",
     "\n",
     "# If you don't want to wait\n",
-    "tokenized_tweets = raw_tweets_df[5][:1600].copy().apply(lambda x : x.lower())\n",
+    "tokenized_tweets = raw_tweets_df[5][:1600].copy().apply(lambda x : x.lower().encode('ascii', 'ignore'))\n",
     "\n",
     "tokenized_tweets = tokenized_tweets.apply(lambda x : tknzr.tokenize(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gdfgfd', 'rer']\n"
+     ]
+    }
+   ],
    "source": [
     "#Should things like ... stay? \n",
     "def remove_punctuation(tweets):\n",
@@ -228,12 +236,21 @@
     "    def remove_punct(tokens):\n",
     "        if '.' in tokens:\n",
     "            tokens.remove('.')\n",
-    "        elif '?' in tokens:\n",
+    "        if '?' in tokens:\n",
     "            tokens.remove('?')\n",
-    "        elif '!' in tokens:\n",
+    "        if '!' in tokens:\n",
     "            tokens.remove('!')\n",
-    "        elif ',' in tokens:\n",
+    "        if ',' in tokens:\n",
     "            tokens.remove(',')\n",
+    "        if '\\'' in tokens:\n",
+    "            tokens.remove('\\'')\n",
+    "        if '\"' in tokens:\n",
+    "            tokens.remove('\"')\n",
+    "        if '#' in tokens:\n",
+    "            tokens.remove('#')\n",
+    "        if '' in tokens:\n",
+    "            tokens.remove('#')\n",
+    "            \n",
     "        return tokens\n",
     "    return t.apply(lambda tweet : remove_punct(tweet))\n",
     "\n",
@@ -262,20 +279,19 @@
     "def identity_tokenizer(text):\n",
     "    return text\n",
     "\n",
-    "def scikit_vectorize(tweets):\n",
+    "def scikit_vectorize(tweets, min_freq):\n",
     "    t = tweets.copy()\n",
-    "    vectorizer = TfidfVectorizer(lowercase=False, tokenizer=identity_tokenizer, min_df=2)\n",
+    "    vectorizer = TfidfVectorizer(lowercase=False, tokenizer=identity_tokenizer, min_df=min_freq, dtype=np.float32)\n",
     "    vectors = vectorizer.fit_transform(t)\n",
     "    feature_names = vectorizer.get_feature_names()\n",
     "    dense = vectors.todense()\n",
     "    denselist = dense.tolist()\n",
     "    return pd.DataFrame(denselist, columns=feature_names)\n",
     "\n",
-    "def merge_tokens(tweets):\n",
+    "def str_list_to_list(tweets):\n",
     "    t = tweets.copy()\n",
-    "    return t.apply(lambda tweet: ' '.join(tweet))\n",
-    "\n",
-    "\n",
+    "    import ast \n",
+    "    return t.apply(lambda x: ast.literal_eval(x))\n",
     "\n",
     "def lemmatize(tweets):\n",
     "    t = tweets.copy()\n",
@@ -297,12 +313,30 @@
     "        transcoded_tag = get_wordnet_pos(w[1])\n",
     "        wl = lem.lemmatize(w[0], transcoded_tag)\n",
     "        return (wl,w[1])\n",
-    "    return t.apply(lambda tweet:[lemmatize_word(w) for w in tweet])"
+    "    return t.apply(lambda tweet:[lemmatize_word(w) for w in tweet])\n",
+    "\n",
+    "def remove_punct(tokens):\n",
+    "        if '.' in tokens:\n",
+    "            tokens.remove('.')\n",
+    "        if '?' in tokens:\n",
+    "            tokens.remove('?')\n",
+    "        if '!' in tokens:\n",
+    "            tokens.remove('!')\n",
+    "        if ',' in tokens:\n",
+    "            tokens.remove(',')\n",
+    "        return tokens\n",
+    "    \n",
+    "def remove_one_char_trash(tweets):\n",
+    "    return tweets.apply(lambda tweet: [s for s in tweet if len(s) >= 2])\n",
+    "\n",
+    "arr = [\"gdfgfd\", \"]\",\"rer\"]\n",
+    "arr = [s for s in arr if len(s) >= 2]\n",
+    "print(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +344,7 @@
     "#comment lines to skip some steps\n",
     "#You need to run things in this order\n",
     "tweets = remove_punctuation(tokenized_tweets)\n",
+    "tweets = remove_one_char_trash(tweets)\n",
     "tweets = remove_stop_words(tweets)\n",
     "tweets = pos_tag(tweets)\n",
     "tweets = lemmatize(tweets)\n",
@@ -319,47 +354,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import os\n",
+    "if os.path.exists(\"processed_tweets.csv\"):\n",
+    "    os.remove(\"processed_tweets.csv\")\n",
+    "\n",
+    "tweets.to_csv(\"processed_tweets.csv\", encoding = \"ISO-8859-1\", header=None, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = pd.read_csv(\"processed_tweets.csv\", encoding = \"ISO-8859-1\", header=None)[0].copy()\n",
+    "tweets = str_list_to_list(tweets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(tweets)\n",
+    "tweetsVector = scikit_vectorize(tweets, 2)\n",
+    "\n",
+    "#print(tweets.array)\n",
+    "#tweetsVector\n",
+    "#print(tweetsVector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"vec.csv\"):\n",
+    "    os.remove(\"vec.csv\")\n",
+    "\n",
+    "tweetsVector.to_csv(\"vec.csv\", encoding = \"ISO-8859-1\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             !    \"    #  #24  #fail  #fb    $         %    &    '  ...   yo  \\\n",
-      "0     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "1     0.139964  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "2     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.342562  0.0  0.0  ...  0.0   \n",
-      "3     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "4     0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "...        ...  ...  ...  ...    ...  ...  ...       ...  ...  ...  ...  ...   \n",
-      "1595  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "1596  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "1597  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "1598  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "1599  0.000000  0.0  0.0  0.0    0.0  0.0  0.0  0.000000  0.0  0.0  ...  0.0   \n",
-      "\n",
-      "      youtube   yr  yucky  yup    ~   ½m   ½s    ¿    ï  \n",
-      "0         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "2         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "3         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "4         0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "...       ...  ...    ...  ...  ...  ...  ...  ...  ...  \n",
-      "1595      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1596      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1597      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1598      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1599      0.0  0.0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "\n",
-      "[1600 rows x 1317 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'tweetsVector' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b7ebed553ddb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweetsVector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(tweetsVector.keys())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tweetsVector' is not defined"
      ]
     }
    ],
    "source": [
-    "tweetsVector = scikit_vectorize(tweets.array)\n",
-    "print(tweetsVector)"
+    "print(len(tweetsVector.iloc[0]))\n",
+    "#print(tweetsVector.keys())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
