Fixed double-training of models
Signed-off-by: CorEng <cormacenglish@gmail.com>

--- a/SmallModels.ipynb
+++ b/SmallModels.ipynb
@@ -334,7 +334,7 @@
     "plt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
     "report_frame = {}\n",
     "for model in models:\n",
-    "    y_pred = model.fit(X_train, y_train).predict(X_test)\n",
+    "    y_pred = model.predict(X_test)\n",
     "    y_score = model.predict_proba(X_test)\n",
     "    model_name = str(model.__class__).split('.')[-1].split('\\'')[0]\n",
     "    \n",
